[gd_scene load_steps=9 format=2]

[ext_resource path="res://decorationscenes/Rock.gd" type="Script" id=1]
[ext_resource path="res://assets/sellbuttonnew.png" type="Texture" id=2]
[ext_resource path="res://assets/placebuttonnew.png" type="Texture" id=3]
[ext_resource path="res://assets/rotatebuttonnew.png" type="Texture" id=4]
[ext_resource path="res://assets/mirrorbuttonnew.png" type="Texture" id=5]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PlaceSellContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -32, -41 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "SwoopIn"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PlaceSellContainer:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1.7, 0.353553 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlaceSellContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1.7, 0.392292 ),
"update": 0,
"values": [ Vector2( -32, 0 ), Vector2( -32, -41 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlaceSellContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "SwoopOut"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PlaceSellContainer:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 0.560791, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlaceSellContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 0.541688, 1 ),
"update": 0,
"values": [ Vector2( -32, -41 ), Vector2( -23, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlaceSellContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Rock1" type="StaticBody2D"]
input_pickable = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/SwoopIn = SubResource( 3 )
anims/SwoopOut = SubResource( 4 )

[node name="PlaceSellContainer" type="HBoxContainer" parent="."]
margin_left = -32.0
margin_top = -41.0
margin_right = 32.0
margin_bottom = -28.0
rect_pivot_offset = Vector2( 32, 41 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Place" type="TextureButton" parent="PlaceSellContainer"]
margin_right = 13.0
margin_bottom = 13.0
texture_normal = ExtResource( 3 )

[node name="Rotate" type="TextureButton" parent="PlaceSellContainer"]
margin_left = 17.0
margin_right = 30.0
margin_bottom = 13.0
texture_normal = ExtResource( 4 )

[node name="Mirror" type="TextureButton" parent="PlaceSellContainer"]
margin_left = 34.0
margin_right = 47.0
margin_bottom = 13.0
texture_normal = ExtResource( 5 )

[node name="Sell" type="TextureButton" parent="PlaceSellContainer"]
margin_left = 51.0
margin_right = 64.0
margin_bottom = 13.0
texture_normal = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="PlaceSellContainer/Place" to="." method="_on_Place_pressed"]
[connection signal="pressed" from="PlaceSellContainer/Rotate" to="." method="_on_Rotate_pressed"]
[connection signal="pressed" from="PlaceSellContainer/Mirror" to="." method="_on_Mirror_pressed"]
[connection signal="pressed" from="PlaceSellContainer/Sell" to="." method="_on_Sell_pressed"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
